--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,12 @@ body{
     cursor: pointer;
 }
 
+.selected{
+    border: 2px solid #222;
+    font-weight: 800;
+}
+
+
 .btn:hover{
     background: #222;
     color: #fff;
@@ -65,4 +71,12 @@ body{
     border-radius: 4px;
     cursor: pointer;
     display: none;
+}
+
+.correct{
+    background: #9aeabc;
+}
+
+.incorrect{
+    background: #ff9393;
 }
