--- a/styles.css
+++ b/styles.css
@@ -55,10 +55,15 @@ body{
 }
 
 
-.btn:hover{
+.btn:hover:not([disabled]){
     background: #222;
     color: #fff;
 }
+
+.btn:disabled{
+    cursor: no-drop;
+}
+
 
 #next-btn {
     background: #001e4d;
